chore: modify CORS configuration to use environment variable for allowed origins

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,5 +1,8 @@
 # Insert your Microsoft SQL Server database connection strings below
 CONNECTION_STRINGS=
 
+# Specify the allowed origins for CORS as a semicolon-separated list, e.g., http://localhost:5173;http://example.com
+ALLOWED_ORIGINS=
+
 # ASP.NET Core environment setting, e.g., Development, Staging, Production
 ASPNETCORE_ENVIRONMENT=
